--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
   padding-top: 2rem;
   justify-content: center;
   display: grid;
-  grid-template-columns: 20rem 5rem 20rem;
+  grid-template-columns: 30rem 18rem 30rem;
   align-items: center;
   font-size: 5rem;
 }
@@ -48,7 +48,7 @@ header {
 #section-options {
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: 16rem 16rem 16rem;
+  grid-template-columns: 24rem 24rem 24rem;
   justify-content: center;
   
 }
@@ -59,20 +59,26 @@ header {
 }
 
 .btnOption {
-  width: 14rem;
+  width: 20rem;
   height: 7rem;
   font-size: 2rem;
   border-radius: 10px;
   margin: 0rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   padding: 0rem;
 }
 
-.btnOption:hover, #reset button:hover {
+.btnOption:disabled {
+  background-color: gray;
+}
+
+.btnOption:hover:enabled, #reset button:hover {
   background-color: rgb(0, 129, 72);
   border-radius: 10px;
 }
 
-.btnOption:active, #reset button:active {
+.btnOption:active:enabled, #reset button:active {
   background-color: rgb(92, 246, 74);
   border-radius: 10px;
 }
@@ -88,15 +94,16 @@ header {
   padding: 1rem;
   text-align: center;
   font-size: 3rem;
+  color: rgb(92, 246, 74);
 }
 
-#reset {
+#reset-div {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-#reset button {
+#reset-div button {
   width: 10rem;
   height: 3rem;
   font-size: 1.6rem;
