--- a/style.css
+++ b/style.css
@@ -73,12 +73,12 @@ header {
   background-color: gray;
 }
 
-.btnOption:hover:enabled, #reset button:hover {
+.btnOption:hover:enabled, #reset:hover {
   background-color: rgb(0, 129, 72);
   border-radius: 10px;
 }
 
-.btnOption:active:enabled, #reset button:active {
+.btnOption:active:enabled, #reset:active {
   background-color: rgb(92, 246, 74);
   border-radius: 10px;
 }
